<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizzapp.MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/question_name1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:textSize="18sp"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textSize="14sp"
            android:text="@string/question1"/>
        <LinearLayout
            android:id="@+id/question1_answers_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <CheckBox
            android:id="@+id/checkbox1_question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:text="@string/answer1q1"/>
        <CheckBox
            android:id="@+id/checkbox2_question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:text="@string/answer2q1"/>
        <CheckBox
            android:id="@+id/checkbox3_question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:text="@string/answer3q1"/>
        <CheckBox
            android:id="@+id/checkbox4_question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:text="@string/answer4q1"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/question_name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:textSize="18sp"/>

        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textSize="14sp"
            android:text="@string/question2"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/radio_question2">
            <RadioButton
                android:id="@+id/radio1_q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="14dp"
                android:text="@string/answer1q2" />
            <RadioButton
                android:id="@+id/radio2_q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="14dp"
                android:text="@string/answer2q2" />
            <RadioButton
                android:id="@+id/radio3_q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="14dp"
                android:text="@string/answer3q2" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/question_name3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:textSize="18sp"/>

        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textSize="14sp"
            android:text="@string/question3"/>
        <CheckBox
            android:id="@+id/checkbox1_question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:text="@string/answer1q3"/>
        <CheckBox
            android:id="@+id/checkbox2_question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:text="@string/answer2q3"/>
        <CheckBox
            android:id="@+id/checkbox3_question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:text="@string/answer3q3"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/question_name4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_4"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:textSize="18sp"/>

        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textSize="14sp"
            android:text="@string/question4"/>

        <EditText
            android:id="@+id/q4_textinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:onClick="checkAnswers"
            android:text="@string/check" />




    </LinearLayout>







</ScrollView>
